pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod1
  name: pod1
spec:
  containers:
    - image: nginx
      name: pod1
      volumeMounts:
        - name: secret1
          mountPath: '/etc/foo'
          readOnly: true
      resources:
        cpu:
          request:
          limit:
        memory:
          request:
          limit:
  volumes:
    - name: secret1
      secret:
        secretName: secret1
  dnsPolicy: ClusterFirst
  restartPolicy: Always
